updatec visualization by adding median and max height

--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
           fill: #3498db;
       }
       .me {
-          fill: rgb(234, 112, 111);
+          fill: rgb(228, 75, 75);
       }
       .ml{
           fill: #1abc9c;
+      }
+      .mm{
+          fill: rgb(130, 195, 53);
+      }
+      .md{
+          fill: rgb(254, 115, 81);
       }
       .tooltip {
         position: absolute;
@@ -44,6 +50,12 @@
       <!-- /the chart goes here -->
     </div>
     <div class='meanLength'>
+      <!-- /the chart goes here -->
+    </div>
+     <div class='meanMedian' style="float:left">
+      <!-- /the chart goes here -->
+    </div>
+    <div class='meanMaxDepth'>
       <!-- /the chart goes here -->
     </div>
     <script type="text/javascript" src="plot.js"></script>
